# llm-proxy-manager

./: .dockerignore  .env.example  .gitignore  APP-INTEGRATION.md  AUTH-IMPLEMENTATION-PLAN.md  CHANGELOG.md  CLAUDE-CODE-CLI-SETUP.md  CLAUDE-CODE-SETUP.md  CLAUDE.md  CLUSTER-ARCHITECTURE.md  COMPLETE-SETUP-GUIDE.md  DOCKER-HUB-GUIDE.md  Dockerfile  FEATURES.md  FINAL-SUMMARY.md  LICENSE  LMRH-PROTOCOL.md  Makefile  NEXT-STEPS.md  PUBLISHING.md  README.md  RELEASE_v1.1.0.md  UPGRADE_v1.1.0_PLAN.md  add-api-keys.patch  add-authentication.js  alembic.ini  apply_quick_wins.py  architecture.md  bug-log.md  configure-claude-cli.sh  deploy-c1conversations.sh  deploy-tmrwww01.sh  deploy-tmrwww02.sh  deploy-with-api-keys.sh  deploy.sh  design.md  docker-compose.yml  nginx-config.conf  nginx.conf  package-lock.json  (+12 more)
alembic/: env.py
app/: __version__.py  config.py  config_runtime.py  main.py
docs/: claude-pro-max-oauth-capture.md  draft-blagbrough-lmrh-00.md  lmrh-1.1-announcement.md  lmrh-1.2-cache-mode-dim.md  lmrh-1.2-region-pinning.md  lmrh-1.2-substitution-disclosure.md  runs-runbook.md
frontend/: package-lock.json  package.json  vite.config.ts
public/: index-basic-original.html  index.html  login.html  reset-password.html
scripts/: reconcile_provider_ids.py  smoke_test.py  test_claude_oauth_live.py
sidecar/: Dockerfile  README.md  capture-runner.py
src/: cluster.js  database.js  monitor.js  notifications.js  package.json  pricing.js  server-backup.js  server-cluster-integration.js  server-streaming.js  server-without-apikeys.js  server.js
tests/: auth.spec.js  (+18 more)
(+246 files in other folders)
